@@ -1,4 +1,4 @@
-.\"	$NetBSD: hangman.6,v 1.7 1999/09/17 20:45:49 jsm Exp $
+.\"	$NetBSD: hangman.6,v 1.9 2002/01/20 00:52:22 wiz Exp $
 .\"
 .\" Copyright (c) 1983, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -38,7 +38,7 @@
 .Os
 .Sh NAME
 .Nm hangman
-.Nd Computer version of the game hangman
+.Nd computer version of the game hangman
 .Sh SYNOPSIS
 .Nm
 .Op Fl d Ar wordlist
@@ -64,5 +64,5 @@ Set the minimum word length to use. The default is 6 letters.
 .It Pa @hangman_wordsfile@
 On-line word list
 .El
-.Sh AUTHOR
-Ken Arnold
+.Sh AUTHORS
+.An Ken Arnold
